QML TableView: resizable{Rows|Columns} scroll fix

The problem was that the table view resize handler accepted scroll
events but did nothing with them. The fix is to simply not accept
these events.

Pick-to: 6.2 6.5 6.6
Fixes: QTBUG-116566
Change-Id: Ica4afc45908e1b4c0b8aac11a3798981b6250baf
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>